Change - restructure, fix padding, wrap link

--- a/scss/pcj.scss
+++ b/scss/pcj.scss
@@ -232,7 +232,11 @@ Other
 }
 
 .header {
-	padding: 8rem 0 1rem;
+	padding-top: 4rem;
+	@media (min-width: 550px) {
+		padding-top: 8rem;
+	}
+	padding-bottom: 1rem;
 
 	nav a {
 	    color: $black;
